restored sample tasks

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ local_settings.py
 sqlite-jdbc-3.7.2.jar
 
 xerial-sqlite-license.txt
-codequiz-server/codequiz_db_file_2
+codequiz-server/codequiz_db_file*
