fix some more deployment problems (few are remaining)

--- a/deployment/files/uberspace/uwsgi/apps-enabled/template_PROJECT_NAME.ini
+++ b/deployment/files/uberspace/uwsgi/apps-enabled/template_PROJECT_NAME.ini
@@ -17,7 +17,8 @@ static-map = /static=%(base)/collected_static
 app = wsgi
 
 
-plugin = python
+# this is obsolete and causes problems
+# plugin = python
 
 uid = {{context.user}}
 gid = {{context.user}}
