config-example.ini: update with sanitized values from real config

--- a/deployment/config-example.ini
+++ b/deployment/config-example.ini
@@ -1,4 +1,4 @@
-# This file contains example settings which should mostly work for own deployment. Of course you need to enter your own domain and access data. This file is expected to be placed outside __BASEDIR__ (that is where manage.py lives).
+# This file contains example settings which should mostly work for own deployment. Of course you need to enter your own domain and access data. This file is expected to be placed in __BASEDIR__ (that is where manage.py lives).
 
 [settings]
 
@@ -6,21 +6,18 @@
 # Settings which needs to be changed
 # #############################################################################
 
-remote = something.uberspace.de
-user = your_username
+remote = foobarbaz.uberspace.de
+user = codequiz
 
 
 
 # the following was created with: python3 -c "import secrets; print(secrets.token_urlsafe(50))"
-SECRET_KEY = VStTr-Ke0xD1bE42Ji-znIwi---example---MM41ANvdvpNydZIS5nJCW8GJv5a068
+SECRET_KEY = OP0sgDpDKY--example-secret--F3lLmFbIM5rSzPggs
 
 
-# #############################################################################
-# Settings which could be changed for your instance of moodpoll
-# #############################################################################
+ADMIN_PASS = 1YFqB42XQJ--example-secret--VilR1iA759s1FbI78
 
-MOOD_VALUE_MAX = 2
-MOOD_VALUE_MIN = -3
+
 
 # #############################################################################
 # Settings which should be OK for most use cases
@@ -28,10 +25,23 @@ MOOD_VALUE_MIN = -3
 
 # deployment settings
 
-deployment_dir = django_project_deployment
-deployment_path = /home/%(user)s/%(deployment_dir)s
-venv = django_venv
-app_name=moodpoll
+# deployment_dir = django_project_deployment
+app_name = codequiz
+PROJECT_NAME = codequiz_project
+port = 8000
+
+
+django_url_prefix = "/"
+static_url_prefix = static
+
+
+deployment_path = /home/%(user)s/%(PROJECT_NAME)s-deployment
+
+# name (not path)
+venv = %(PROJECT_NAME)s-venv
+
+pip_command = pip3.8
+python_version = python3.8
 
 # django settings
 
@@ -44,15 +54,14 @@ BASEURL=//%(user)s.uber.space/
 STATIC_ROOT = __BASEDIR__/collected_static
 
 
-BACKUPDIR = __BASEDIR__/db_backups
+BACKUP_PATH = __BASEDIR__/db_backups
 
 
 DJANGO_LOGFILE = __BASEDIR__/django_logfile.log
 MYAPP_LOGFILE = __BASEDIR__/myapp_logfile.log
 
 # this is necessary to let uwsgi find the pelican command:
-
-PATH_EXTENSION = /home/%(user)s/%(venv)s/bin
+# PATH_EXTENSION = /home/%(user)s/%(venv)s/bin
 
 
 # #############################################################################
@@ -68,6 +77,7 @@ DEBUG__DEVMODE=True
 ALLOWED_HOSTS__DEVMODE=*, localhost
 STATIC_ROOT__DEVMODE=
 BASEURL__DEVMODE=/
+BACKUP_PATH__DEVMODE=__BASEDIR__/local_backups
 
 # #############################################################################
 # settings optional to change
