improve deployment (w.r.t db file); simplify directory structure (drop run and settings/*)

--- a/deployment/config-example.ini
+++ b/deployment/config-example.ini
@@ -12,10 +12,10 @@ user = codequiz
 
 
 # the following was created with: python3 -c "import secrets; print(secrets.token_urlsafe(50))"
-SECRET_KEY = OP0sgDpDKY--example-secret--F3lLmFbIM5rSzPggs
+SECRET_KEY = S__I0M-jo5--example-secret--zwXDCQf3ublICMk08
 
 
-ADMIN_PASS = 1YFqB42XQJ--example-secret--VilR1iA759s1FbI78
+ADMIN_PASS = ayDasAAoUc--example-secret--4VUk3-osznjGXbuJU
 
 
 
@@ -55,6 +55,8 @@ STATIC_ROOT = __BASEDIR__/collected_static
 
 
 BACKUP_PATH = __BASEDIR__/db_backups
+
+DB_FILE_PATH = __BASEDIR__/db.sqlite3
 
 
 DJANGO_LOGFILE = __BASEDIR__/django_logfile.log
