--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 django-taggit-autosuggest
 django-mathjax @ git+https://github.com/tbabej/django-mathjax@fdc70dd5a7f06a71da2eee1e8e713a16796df5d7
+demjson3
