--- a/deployment/config-example.ini
+++ b/deployment/config-example.ini
@@ -12,10 +12,10 @@ user = codequiz
 
 
 # the following was created with: python3 -c "import secrets; print(secrets.token_urlsafe(50))"
-SECRET_KEY = S__I0M-jo5--example-secret--zwXDCQf3ublICMk08
+SECRET_KEY = Skimfbgntv--example-secret--cuKdQ9eRgxMWCbfS4
 
 
-ADMIN_PASS = ayDasAAoUc--example-secret--4VUk3-osznjGXbuJU
+ADMIN_PASS = 9yCXRIQ6It--example-secret--VcA-lid83MA-Be_qw
 
 
 
@@ -52,6 +52,7 @@ BASEURL=//%(user)s.uber.space/
 
 # `__BASEDIR__` will be replaced inside settings
 STATIC_ROOT = __BASEDIR__/collected_static
+MEDIA_ROOT = __BASEDIR__/media
 
 
 BACKUP_PATH = __BASEDIR__/db_backups
