--- a/deployment/files/uberspace/etc/services.d/template_PROJECT_NAME_uwsgi.ini
+++ b/deployment/files/uberspace/etc/services.d/template_PROJECT_NAME_uwsgi.ini
@@ -1,3 +1,6 @@
+# this file is used to configure the supervisord service of {{context.project_name}}
+# i.e. it will take care that the actual process is running and will restart it if necessary
+
 [program:uwsgi-{{context.project_name}}]
 command={{context.venv_abs_bin_path}}uwsgi --master --emperor %(ENV_HOME)s/uwsgi/apps-enabled/{{context.project_name}}.ini
 autostart=true
