config-example.ini: updata config

--- a/deployment/config-example.ini
+++ b/deployment/config-example.ini
@@ -1,5 +1,9 @@
 # This file contains example settings which should mostly work for own deployment. Of course you need to enter your own domain and access data. This file is expected to be placed in __BASEDIR__ (that is where manage.py lives).
 
+
+# generate example file by calling:
+# deploymentutils --remove-secrets-from-config config.ini -o deployment/config-example.ini
+
 [settings]
 
 # #############################################################################
@@ -13,6 +17,10 @@ user = codequiz
 
 # the following was created with: python3 -c "import secrets; print(secrets.token_urlsafe(50))"
 SECRET_KEY = Skimfbgntv--example-secret--cuKdQ9eRgxMWCbfS4
+
+
+# created with: from cryptography.fernet import Fernet; Fernet.generate_key()
+ENCRYPTION_KEY = "65XuefDl__example__luE0eXX7M9aFbx40fpnp_7Ls="
 
 
 ADMIN_PASS = 9yCXRIQ6It--example-secret--VcA-lid83MA-Be_qw
@@ -46,16 +54,18 @@ python_version = python3.8
 # django settings
 
 DEBUG = False
-ALLOWED_HOSTS = %(user)s.uber.space
+ALLOWED_HOSTS = %(user)s.uber.space, codequiz.org
 BASEURL=//%(user)s.uber.space/
 
+VERSION = 0.5.0
 
 # `__BASEDIR__` will be replaced inside settings
 STATIC_ROOT = __BASEDIR__/collected_static
 MEDIA_ROOT = __BASEDIR__/media
 
 
-BACKUP_PATH = __BASEDIR__/db_backups
+# this path sould be located outside <BASEDIR> because the deployment might delete that completely
+BACKUP_PATH = __BASEDIR__/../%(PROJECT_NAME)s_db_backups
 
 DB_FILE_PATH = __BASEDIR__/db.sqlite3
 
